# ontouml-graph2json

./: .gitignore  README.md  globals.py  main.py  pyproject.toml  requirements.txt
modules/: arguments.py  io_graph.py  io_json.py  object_keys.py  utils.py
modules/encoder/: encoder_aux.py  encoder_create.py  encoder_main.py  encoder_mount.py  encoder_types_treatment.py  mount_dictionaries.py  sparql_queries.py
results/: test_001.json
src/: main.py
src/modules/: arguments.py  globals.py  io_graph.py  metadata.py
src/modules/encoder/: encoder_create.py  encoder_main.py  encoder_types_treatment.py
tests/: test_aux.py  test_main.py
tests/test_files/: test_001.json  test_006.json  test_006.ttl  test_007.json  test_007.ttl  test_008.json  test_008.ttl
